[gd_scene load_steps=11 format=3 uid="uid://bgpuvx4ahsedl"]

[ext_resource type="PackedScene" uid="uid://bh08m7ru27rgn" path="res://data/scenes/menu/singleplayer.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://c1j85slkde000" path="res://data/scenes/menu/main.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c3j65h40c176q" path="res://data/scenes/menu/options.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cedoa1e4044ow" path="res://data/scenes/menu/multiplayer.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b5k7gmgnkm5jm" path="res://data/scenes/menu/video_options.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://i031vwqie5wx" path="res://data/scenes/menu/control_options.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://b35i5t3jlicca" path="res://data/scenes/menu/audio_options.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://bupucwr8r7boy" path="res://data/scenes/menu/multiplayer_lobby.tscn" id="8"]
[ext_resource type="Script" uid="uid://ce8afwl7hhvs5" path="res://data/scenes/menu/menu.gd" id="9"]
[ext_resource type="PackedScene" uid="uid://cvvm37x1lu3g" path="res://data/scenes/menu/statistics.tscn" id="10"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("9")

[node name="Menus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Menus"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.501961)

[node name="Main" parent="Menus" instance=ExtResource("2")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Singleplayer" parent="Menus" instance=ExtResource("1")]
visible = false
anchors_preset = 0

[node name="Multiplayer" parent="Menus" instance=ExtResource("4")]
visible = false
anchors_preset = 0

[node name="MultiplayerLobby" parent="Menus" instance=ExtResource("8")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Options" parent="Menus" instance=ExtResource("3")]
visible = false
anchors_preset = 0

[node name="ControlOptions" parent="Menus" instance=ExtResource("6")]
visible = false
anchors_preset = 0

[node name="AudioOptions" parent="Menus" instance=ExtResource("7")]
visible = false
anchors_preset = 0

[node name="VideoOptions" parent="Menus" instance=ExtResource("5")]
visible = false
anchors_preset = 0

[node name="Statistics" parent="Menus" instance=ExtResource("10")]
visible = false
anchors_preset = 0

[connection signal="multiplayer_pressed" from="Menus/Main" to="Menus/Multiplayer" method="show"]
[connection signal="options_pressed" from="Menus/Main" to="Menus/Options" method="show"]
[connection signal="singleplayer_pressed" from="Menus/Main" to="Menus/Singleplayer" method="show"]
[connection signal="statistics_pressed" from="Menus/Main" to="Menus/Statistics" method="show"]
[connection signal="back_pressed" from="Menus/Singleplayer" to="Menus/Main" method="show"]
[connection signal="new_game_pressed" from="Menus/Singleplayer" to="." method="_game_started"]
[connection signal="back_pressed" from="Menus/Multiplayer" to="Menus/Main" method="show"]
[connection signal="host_game_pressed" from="Menus/Multiplayer" to="Menus/MultiplayerLobby" method="show"]
[connection signal="host_game_pressed" from="Menus/Multiplayer" to="Menus/MultiplayerLobby" method="start_server"]
[connection signal="join_game_pressed" from="Menus/Multiplayer" to="Menus/MultiplayerLobby" method="show"]
[connection signal="join_game_pressed" from="Menus/Multiplayer" to="Menus/MultiplayerLobby" method="join_server"]
[connection signal="audio_options_pressed" from="Menus/Options" to="Menus/AudioOptions" method="show"]
[connection signal="back_pressed" from="Menus/Options" to="Menus/Main" method="show"]
[connection signal="control_options_pressed" from="Menus/Options" to="Menus/ControlOptions" method="show"]
[connection signal="video_options_pressed" from="Menus/Options" to="Menus/VideoOptions" method="show"]
[connection signal="back_pressed" from="Menus/ControlOptions" to="Menus/Options" method="show"]
[connection signal="back_pressed" from="Menus/AudioOptions" to="Menus/Options" method="show"]
[connection signal="back_pressed" from="Menus/VideoOptions" to="Menus/Options" method="show"]
[connection signal="back_pressed" from="Menus/Statistics" to="Menus/Main" method="show"]
